--- a/rwd/84/template.html
+++ b/rwd/84/template.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Template 84</title>
-    <link rel="stylesheet" href="./Template.css" title="text/css">
+    <link rel="stylesheet" href="./template.css" title="text/css">
 </head>
 
 <body>
@@ -50,7 +50,7 @@
         <div id="container" class="clear">
             <section id="slider">
                 <a href="#">
-                    <img src="../Template/template_images/84/960x360.gif">
+                    <img src="../Template_responsive/template_images/84/960x360.gif">
                 </a>
             </section>
             <section id="shout">
@@ -64,7 +64,8 @@
                 <section id="services" class="clear">
                     <article>
                         <figure>
-                            <img src="../Template/template_images/84/32x32.gif" alt="" width="32" height="32">
+                            <img src="../Template_responsive/template_images/84/32x32.gif" alt="" width="32"
+                                height="32">
                         </figure>
                         <strong>Lorum ipsum dolor</strong>
                         <p>
@@ -79,7 +80,8 @@
                     </article>
                     <article>
                         <figure>
-                            <img src="../Template/template_images/84/32x32.gif" alt="" width="32" height="32">
+                            <img src="../Template_responsive/template_images/84/32x32.gif" alt="" width="32"
+                                height="32">
                         </figure>
                         <strong>Lorum ipsum dolor</strong>
                         <p>
@@ -94,7 +96,8 @@
                     </article>
                     <article class="last">
                         <figure>
-                            <img src="../Template/template_images/84/32x32.gif" alt="" width="32" height="32">
+                            <img src="../Template_responsive/template_images/84/32x32.gif" alt="" width="32"
+                                height="32">
                         </figure>
                         <strong>Lorum ipsum dolor</strong>
                         <p>
@@ -112,7 +115,8 @@
                 <section id="latest" class="last clear">
                     <article class="one_quarter">
                         <figure>
-                            <img src="../Template/template_images/84/215x315.gif" alt="" width="215" height="315">
+                            <img src="../Template_responsive/template_images/84/215x315.gif" alt="" width="215"
+                                height="315">
                             <figcaption>
                                 image Caption Here
                             </figcaption>
@@ -120,7 +124,8 @@
                     </article>
                     <article class="one_quarter">
                         <figure>
-                            <img src="../Template/template_images/84/215x315.gif" alt="" width="215" height="315">
+                            <img src="../Template_responsive/template_images/84/215x315.gif" alt="" width="215"
+                                height="315">
                             <figcaption>
                                 image Caption Here
                             </figcaption>
@@ -128,7 +133,8 @@
                     </article>
                     <article class="one_quarter">
                         <figure>
-                            <img src="../Template/template_images/84/215x315.gif" alt="" width="215" height="315">
+                            <img src="../Template_responsive/template_images/84/215x315.gif" alt="" width="215"
+                                height="315">
                             <figcaption>
                                 image Caption Here
                             </figcaption>
@@ -136,7 +142,8 @@
                     </article>
                     <article class="one_quarter lastbox">
                         <figure>
-                            <img src="../Template/template_images/84/215x315.gif" alt="" width="215" height="315">
+                            <img src="../Template_responsive/template_images/84/215x315.gif" alt="" width="215"
+                                height="315">
                             <figcaption>
                                 image Caption Here
                             </figcaption>
@@ -146,3 +153,22 @@
             </div>
         </div>
     </div>
+    <div class="wrapper row3">
+        <footer id="footer" class="clear">
+            <p class="f1_left">
+                Copyright © 2018 - All Rights Reserved -
+                <a href="#">Domain Name</a>
+            </p>
+            <p class="f1_right">
+                Template by
+                <a href="https://www.os-templates.com/" target="_blank" title="Free Website Templates">OS Templates</a>
+            </p>
+        </footer>
+    </div>
+</body>
+
+</html>
+© 2021 GitHub, Inc.
+Terms
+Privacy
+Security
