--- a/HTML/templates-responsive/template1/index.html
+++ b/HTML/templates-responsive/template1/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 <head>
-<title>template6</title>
+<title>template</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta charset="UTF-8">
 <link rel="stylesheet" href="style.css" type="text/css">
