--- a/RWD assignment/RWD basic 87/index.html
+++ b/RWD assignment/RWD basic 87/index.html
@@ -11,12 +11,12 @@
 <body>
 <!-- ========== Header ============== -->
     <div class="wrapper row1">
-        <header>
-            <div id="title">
+        <header class="col-12">
+            <div id="title" class="col-12">
                 <h1><a href="#">Basic 87</a></h1>
                 <h2>Free HTML5 Website Template</h2>
             </div>
-            <nav>
+            <nav class="header_nav col-12">
                 <ul>
                     <li><a href="#">Text Link</a></li>
                     <li><a href="#">Text Link</a></li>
@@ -32,30 +32,30 @@
 
 <!-- ========== Section ============== -->
     <div class="wrapper row2">
-        <div id="container">
+        <div class="container col-12">
             <div id="homepage">
 
                 <!-- ========== Section I ============== -->
-                <section id="section1">
-                    <article id="article">
+                <section class="section1 col-12">
+                    <article id="article" class=" article1 col-5">
                         <figure>
                             <img src="images/demo/215x315.gif" alt="">
                             <figcaption>IMAGE CAPTION HERE</figcaption>
                         </figure>
                     </article>
-                    <article id="article2">
+                    <article id="article2" class="article1  col-5">
                         <figure>
                             <img src="images/demo/215x315.gif" alt="">
                             <figcaption>IMAGE CAPTION HERE</figcaption>
                         </figure>
                     </article>
-                    <article id="article3">
+                    <article id="article3" class="article1  col-5">
                         <figure>
                             <img src="images/demo/215x315.gif" alt="">
                             <figcaption>IMAGE CAPTION HERE</figcaption>
                         </figure>
                     </article>
-                    <article id="article4">
+                    <article id="article4" class="article1 col-5">
                         <figure>
                             <img src="images/demo/215x315.gif" alt="">
                             <figcaption>IMAGE CAPTION HERE</figcaption>
@@ -64,41 +64,41 @@
                 </section>
 
                 <!-- ========== Section II ============== -->
-                <section id="section2">
+                <section class="section2 col-12">
                     <p>Vestibulumaccumsan egestibulum eu justo convallis augue estas aenean elit intesque sed. Facilispede estibulum nulla orna nisl velit elit ac aliquat non tincidunt. Namjusto cras urna urnaretra lor urna neque sed quis orci nulla laoremut vitae doloreet condimentumst.</p>
                 </section>
             </div>
             <!-- ========== Main Content============== -->
-            <div id="main">
+            <div class="main col-12">
                 <!-- ========== Section III ============== -->
-                <section id="section3">
+                <section class="section3 col-12">
                     <ul>
                         <li id="li1">
                             <!-- ========== Article 1 ============== -->
-                            <article id="article1">
+                            <article id="article1" class="col-12">
                                 <figure id="figure1">
                                     <img src="./images/demo/180x150.gif" alt="180x150">
                                     <figcaption id="figcap1">
                                         <h2>INDONECTETUS FACILIS LEO NIBH</h2>
                                         <p>This is a W3C compliant free website template from OS Templates. For full terms of use of this template please read our website template licence</p>
-                                        <footer id="readmore">
+                                        <div class="readmore">
                                             <a href="#">Read More >></a>
-                                        </footer>
+                                        </div>
                                 </figcaption>
                                 </figure>
                             </article>
                         </li>
                         <li>
                             <!-- ========== Article 2============== -->
-                            <article id="article2">
+                            <article id="article2" class="col-12">
                                 <figure id="figure2">
                                     <img src="./images/demo/180x150.gif" alt="180x150">
                                     <figcaption id="figcap2">
                                         <h2>INDONECTETUS FACILIS LEO NIBH</h2>
                                         <p>You can use and modify the template for both personal and commercial use. You must keep all copyright information and credit links in the template and associated files. For more HTML5 templates visit free website templates.</p>
-                                        <footer id="readmore">
+                                        <div class="readmore">
                                             <a href="#">Read More >></a>
-                                        </footer>
+                                        </div>
                                     </figcaption>
                                 </figure>
                             </article>
@@ -108,7 +108,7 @@
                 </div>
 
                 <!-- ========== Aside ============== -->
-                <aside>
+                <aside class="col-12">
                     <h2>CATEGORIES</h2>
                     <nav>
                         <ul>
@@ -131,7 +131,7 @@
 
 <!-- ========== Footer ============== -->
     <div class="wrapper row3">
-        <footer id="main_footer">
+        <footer class="col-12">
             <p id="left_footer">Copyright © 2021 - All Rights Reserved - CinemaBandi</p>
             <p id="right_footer">Template cloned from OS-Templates by Ervin </p>
         </footer>
