--- a/RWD assignment/RWD basic 88/index.html
+++ b/RWD assignment/RWD basic 88/index.html
@@ -11,12 +11,12 @@
 <body>
 <!-- ========== Header ============== -->
     <div class="wrapper row1">
-        <header>
+        <header class="col-12">
             <div id="title">
                 <h1><a href="#">Basic 88</a></h1>
                 <h2>Free HTML5 Website Template</h2>
             </div>
-            <nav>
+            <nav class="col-12 header_nav">
                 <ul>
                     <li><a href="#">Text Link</a></li>
                     <li><a href="#">Text Link</a></li>
@@ -32,18 +32,18 @@
 
     <!-- =================================================== Container =================================================== -->
     <div class="wrapper row2">
-        <div id="container">
+        <div class="container col-12">
             <!-- ==================== Section 1 ==================== -->
-            <section id="section1">
+            <section class="section1 col-12">
                 <img src="./images/demo/960x360.gif" alt="">
             </section>
             <!-- =================================== -->
 
             <!-- ========== Homepage ============== -->
-            <div id="homepage">
+            <div id="homepage" class="col-12">
                 <!-- =================================== -->
                 <!-- ========== section 2 ============== -->
-                <section id="section2">
+                <section class="section2 col-12">
                     <article id="article1">
                         <figure>
                             <img src="./images/demo/290x180.gif" alt="">
@@ -83,8 +83,8 @@
                 </section>
                 <!-- =================================== -->
                 <!-- ========== section 3 ============== -->
-                <div id="section3">
-                    <figure>
+                <div class="section3 col-12">
+                    <figure class="col-12">
                         <img src="./images/demo/450x250.gif" alt="">
                     </figure>
                     <figcaption>
@@ -102,8 +102,8 @@
     <!-- ================================================================================================================= -->
     <!-- ========== Footer 1 ============== -->
     <div class="wrapper row3">
-        <footer id="details">
-            <section id="details-section1">
+        <footer class="details col-12">
+            <section id="details-section1" class="details_sec">
                 <h2>link block</h2>
                 <nav>
                     <ul>
@@ -115,7 +115,7 @@
                     </ul>
                 </nav>
             </section>
-            <section id="details-section2">
+            <section id="details-section2" class="details_sec">
                 <h2>link block</h2>
                 <nav>
                     <ul>
@@ -127,7 +127,7 @@
                     </ul>
                 </nav>
             </section>
-            <section id="details-section3">
+            <section id="details-section3" class="details_sec">
                 <h2>link block</h2>
                 <nav>
                     <ul>
@@ -139,7 +139,7 @@
                     </ul>
                 </nav>
             </section>
-            <section id="details-section4">
+            <section id="details-section4" class="details_sec">
                 <h2>link block</h2>
                 <nav>
                     <ul>
@@ -156,7 +156,7 @@
 <!-- ================================================================================================================= -->
     <!-- ========== Footer 2 ============== -->
     <div class="wrapper row4">
-        <footer id="main_footer">
+        <footer class="col-12">
             <p id="left_footer">Copyright © 2018 - All Rights Reserved - Domain Name</p>
             <p id="right_footer">Template by OS Templates</p>
         </footer>
