--- a/HTML/RWD/Template_responsive_CSS_Apply/Template4.html
+++ b/HTML/RWD/Template_responsive_CSS_Apply/Template4.html
@@ -6,26 +6,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Template 84</title>
-    <link rel="stylesheet" href="./Template4.css" title="text/css">
+    <link rel="stylesheet" href="../Template_responsive_CSS_Apply/Template4.css" title="text/css">
 </head>
 
 <body>
     <div class="wrapper row1">
-        <header id="header" class="clear0">
+        <header id="header" class="col-12">
             <div id="hgroup">
                 <h1>
                     <a href="#">Basic 84</a>
                 </h1>
                 <h2>Free HTML5 Website Template</h2>
             </div>
-            <form action="#" method="post">
+            <form action="#" method="post" class="col-">
                 <fieldset>
                     <input type="text" value="Search Our Website"
                         onfocus="this.value=(this.value='search our website...') ? '' : this.value ;">
                     <input id="sf_submit" type="submit" value="submit">
                 </fieldset>
             </form>
-            <nav>
+            <nav class="col-8">
                 <ul>
                     <li>
                         <a href="#">Text Link</a>
@@ -47,21 +47,21 @@
         </header>
     </div>
     <div class="wrapper row2">
-        <div id="container" class="clear">
-            <section id="slider">
+        <div id="container" class="col-12">
+            <section id="slider" class="col-12">
                 <a href="#">
                     <img src="../Template_responsive/template_images/84/960x360.gif">
                 </a>
             </section>
-            <section id="shout">
+            <section id="shout" class="col-8">
                 <p>
                     Vestibulumaccumsan egestibulum eu justo convallis augue estas aenean elit intesque sed. Facilispede
                     estibulum nulla orna nisl velit elit ac aliquat non tincidunt namjusto cras urna.
                 </p>
             </section>
-            <div id="homepage">
+            <div id="homepage" class="col-12">
                 <h1>Services We Offer</h1>
-                <section id="services" class="clear">
+                <section id="services" class="col-12 clear">
                     <article>
                         <figure>
                             <img src="../Template_responsive/template_images/84/32x32.gif" alt="" width="32"
@@ -154,7 +154,7 @@
         </div>
     </div>
     <div class="wrapper row3">
-        <footer id="footer" class="clear">
+        <footer id="footer" class="col-12 clear">
             <p class="f1_left">
                 Copyright © 2018 - All Rights Reserved -
                 <a href="#">Domain Name</a>
