--- a/HTML/templates-responsive/template4/index.html
+++ b/HTML/templates-responsive/template4/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 <head>
-<title>template</title>
+<title>template4</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -11,7 +11,7 @@
 <div class="wrapper row1">
   <header id="header" class="clear">
     <div id="hgroup">
-      <h1><a href="#">template2</a></h1>
+      <h1><a href="#">template4</a></h1>
       <h2>nature images</h2>
     </div>
     <nav>
