--- a/HTML/templates-responsive/template6/index.html
+++ b/HTML/templates-responsive/template6/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 <head>
-<title>template</title>
+<title>template6</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta charset="UTF-8">
 <link rel="stylesheet" href="style.css" type="text/css">
@@ -10,7 +10,7 @@
 <div class="wrapper row1">
   <header id="header" class="clear">
     <div id="hgroup">
-      <h1><a href="#">template1</a></h1>
+      <h1><a href="#">template6</a></h1>
       <h2>natureimages</h2>
     </div>
     <nav>
