--- a/CSS/Flexbox/sample.html
+++ b/CSS/Flexbox/sample.html
@@ -11,7 +11,8 @@
             background: grey;
             padding: 5px;
             display: flex;
-            flex-direction: column-reverse;
+            /* flex-direction: column-reverse; */
+            flex-direction: column;
         }
 
         .box {
