--- a/flex/column.html
+++ b/flex/column.html
@@ -6,21 +6,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        .container{
+        #container{
             display: flex;
-            background: red;
+            background-color: grey;
+            padding: 5px;
+            
         }
         #box{
-            width: 100%;
+            background-color: red;
             margin: 10px;
+            padding: 20px;
+            font-size: 20px;
+            text-align: center;
+            color:white;
         }
     </style>
 
 </head>
 <body>
-    <div id="container"></div>
-    <div id="box"></div>
-    <div id="box"></div>
-    <div id="box"></div>
+    <div id="container">
+    <div id="box">1</div>
+    <div id="box">2</div>
+    <div id="box">3</div>
+</div>
 </body>
 </html>
