--- a/css/sam2_flex.html
+++ b/css/sam2_flex.html
@@ -8,8 +8,12 @@
     <title>Document</title>
     <style>
         .flex-container {
-            display: flex;
             background-color: rgb(138, 233, 146);
+            padding: 10px;
+            display: flex;
+            flex-direction: column;
+
+
         }
 
         .flex-container>div {
@@ -17,6 +21,7 @@
             margin: 10px;
             padding: 20px;
             font-size: 30px;
+            text-align: center;
         }
     </style>
 </head>
