Adding Flex Items

--- a/CSS/Flexbox/sample.html
+++ b/CSS/Flexbox/sample.html
@@ -15,7 +15,7 @@
             /* flex-wrap: wrap-reverse; */
             /* flex-wrap: wrap ; */
             /* justify-content: center; */
-            justify-content: space-between;
+            /* justify-content: space-between; */
             /* justify-content: space-around; */
             
         }
