--- a/CSS/Flexbox/sample3.html
+++ b/CSS/Flexbox/sample3.html
@@ -37,13 +37,13 @@
         <div class="box" style="order: 5">5</div>
         <div class="box" style="order: 2">6</div> -->
        
-        <!-- <div class="box" style="flex-grow:1">1</div>
-        <div class="box" style="flex-grow:1">2</div>
-        <div class="box" style="flex-grow:4">3</div> -->
+        <div class="box" style="flex-grow:1">1</div>
+        <div class="box" style="flex-grow:2">2</div>
+        <div class="box" style="flex-grow:4">3</div>
       
-        <div class="box" style="flex-basis: 200px;">1</div>
+        <!-- <div class="box" style="flex-basis: 200px;">1</div>
         <div class="box" style="">2</div>
-        <div class="box" style="">3</div>
+        <div class="box" style="">3</div> -->
 
     </div>
 </body>
