completed fourth template

--- a/Assignments/Assignment Flex RWD/Flex RWD Basic 86/index.html
+++ b/Assignments/Assignment Flex RWD/Flex RWD Basic 86/index.html
@@ -32,10 +32,10 @@
 <!-- ========== Row 2 ============== -->
 <!-- ========== Container ============== -->
     <div class="wrapper row2">
-        <div id="container">
+        <div class="container">
             <!-- =================================== -->
             <!-- ========== section 1 ============== -->
-            <div id="section1">
+            <div class="section1">
                 <figure>
                     <img src="./images/demo/630x300.gif" alt="">
                 </figure>
@@ -50,13 +50,13 @@
             <!-- =================================== -->
 
             <!-- ========== Homepage ============== -->
-            <div id="homepage">
+            <div class="homepage">
                 <!-- =================================== -->
                 <!-- ========== section 2 ============== -->
-                <section id="section2">
+                <section class="section2">
                     <article id="article1">
                         <h2>LORUM IPSUM DOLOR</h2>
-                        <img src="./images/demo/80x80.gif" alt="">
+                        <figure><img src="./images/demo/80x80.gif" alt=""></figure>
                         <p>Vestibulumaccumsan egestibulum eu justo convallis augue estas aenean elit intesque sed. Facilispede estibulum nulla orna nisl velit elit ac aliquat non tincidunt. Namjusto cras urna urnaretra lor urna neque sed quis orci nulla. Laoremut vitae doloreet condimentumst phasellentes dolor ut a ipsum id consectetus. Inpede cumst vitae ris tellentesque fring intesquet.</p>
                         <p class="readmore">
                             <a href="#">Read More »</a>
@@ -64,7 +64,7 @@
                     </article>
                     <article id="article2">
                         <h2>LORUM IPSUM DOLOR</h2>
-                        <img src="./images/demo/80x80.gif" alt="">
+                        <figure><img src="./images/demo/80x80.gif" alt=""></figure>
                         <p>Vestibulumaccumsan egestibulum eu justo convallis augue estas aenean elit intesque sed. Facilispede estibulum nulla orna nisl velit elit ac aliquat non tincidunt. Namjusto cras urna urnaretra lor urna neque sed quis orci nulla. Laoremut vitae doloreet condimentumst phasellentes dolor ut a ipsum id consectetus. Inpede cumst vitae ris tellentesque fring intesquet.</p>
                         <p class="readmore">
                             <a href="#">Read More »</a>
@@ -72,7 +72,7 @@
                     </article>
                     <article id="article3">
                         <h2>LORUM IPSUM DOLOR</h2>
-                        <img src="./images/demo/80x80.gif" alt="">
+                        <figure><img src="./images/demo/80x80.gif" alt=""></figure>
                         <p>Vestibulumaccumsan egestibulum eu justo convallis augue estas aenean elit intesque sed. Facilispede estibulum nulla orna nisl velit elit ac aliquat non tincidunt. Namjusto cras urna urnaretra lor urna neque sed quis orci nulla. Laoremut vitae doloreet condimentumst phasellentes dolor ut a ipsum id consectetus. Inpede cumst vitae ris tellentesque fring intesquet.</p>
                         <p class="readmore">
                             <a href="#">Read More »</a>
@@ -81,7 +81,7 @@
                 </section>
                 <!-- =================================== -->
                 <!-- ========== section 3 ============== -->
-                <section id="section3">
+                <section class="section3">
                     <article id="article1">
                         <figure>
                             <img src="./images/demo/215x100.gif" alt="">
@@ -137,7 +137,7 @@
     <!-- =================================== -->
     <!-- ========== Footer ============== -->
     <div class="wrapper row3">
-        <footer id="main_footer">
+        <footer>
             <p id="left_footer">Copyright © 2021 - All Rights Reserved - CinemaBandi</p>
             <p id="right_footer">Template cloned from OS-Templates by Ervin </p>
         </footer>
