--- a/CSS/Flex box/flex1.html
+++ b/CSS/Flex box/flex1.html
@@ -8,22 +8,27 @@
     <style>
         .container{
             background-color:blue;
-            height:200px;
+            height:400px;
             display:flex;
             flex-wrap:wrap;
             justify-content:space-between;
-            align-items: center;
+            /* align-items: center; */
         }
         .box{
+            display:block;
+            width:100%;
             background-color:red;
             text-align:center;
             line-height:100px;
             margin:3px;
-            width:100px;
         }
-        .box3{
-            width:100%;
+        .box1{
+          width:45%;
         }
+        .box2{
+          width:45%;
+        }
+
     </style>
 </head>
 <body>
