--- a/templates_FlexBox/T83_spaceX.html
+++ b/templates_FlexBox/T83_spaceX.html
@@ -39,7 +39,7 @@
         }
         
         .fl_right {
-                float: right;
+                display: flex;
             }
         @media only screen and (max-width:768px) {
             #header {
@@ -51,6 +51,13 @@
                 display: block;
                 border-bottom: 3px solid white;
                 margin: 0 auto;
+                display: flex;
+                flex-direction: row;
+                align-items: center;
+                justify-content: center;
+            }
+            #header nav ul li a{
+                text-align: center;
             }
 
             nav {
