--- a/templates_FlexBox/T88_developer.html
+++ b/templates_FlexBox/T88_developer.html
@@ -45,10 +45,11 @@
     }
 
     /* SHADOW EFFECT_----------------------------------------------------- */
-    .row1 h1 a,
-    h2 {
-      color: white;
-      text-shadow: 1px 1px 5px rgb(180, 216, 18), 0 0 30px rgb(205, 236, 25), 0 0 10px rgb(175, 233, 41);
+    #hrgroup h1 a,
+    h1,
+    h2{
+      color: rgb(233, 25, 25);
+      text-shadow: 1px 1px 5px rgb(180, 216, 18), 0 0 30px rgb(219, 221, 208), 0 0 10px rgb(175, 233, 41);
 
     }
 
