completed fifth template

--- a/Assignments/Assignment Flex RWD/Flex RWD Basic 87/index.html
+++ b/Assignments/Assignment Flex RWD/Flex RWD Basic 87/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Basic-87</title>
     <link rel="stylesheet" href="./styles.css">
-    
+
 </head>
+
 <body>
-<!-- ========== Header ============== -->
+    <!-- ========== Header ============== -->
     <div class="wrapper row1">
         <header>
             <div id="title">
@@ -24,15 +26,12 @@
                     <li><a href="#">Text Link</a></li>
                     <li class="last"><a href="#">Text Link</a></li>
                 </ul>
-                
             </nav>
         </header>
     </div>
-
-
-<!-- ========== Section ============== -->
+    <!-- ========== Section ============== -->
     <div class="wrapper row2">
-        <div id="container">
+        <div class="container">
             <div id="homepage">
 
                 <!-- ========== Section I ============== -->
@@ -65,7 +64,9 @@
 
                 <!-- ========== Section II ============== -->
                 <section id="section2">
-                    <p>Vestibulumaccumsan egestibulum eu justo convallis augue estas aenean elit intesque sed. Facilispede estibulum nulla orna nisl velit elit ac aliquat non tincidunt. Namjusto cras urna urnaretra lor urna neque sed quis orci nulla laoremut vitae doloreet condimentumst.</p>
+                    <p>Vestibulumaccumsan egestibulum eu justo convallis augue estas aenean elit intesque sed.
+                        Facilispede estibulum nulla orna nisl velit elit ac aliquat non tincidunt. Namjusto cras urna
+                        urnaretra lor urna neque sed quis orci nulla laoremut vitae doloreet condimentumst.</p>
                 </section>
             </div>
             <!-- ========== Main Content============== -->
@@ -80,11 +81,13 @@
                                     <img src="./images/demo/180x150.gif" alt="180x150">
                                     <figcaption id="figcap1">
                                         <h2>INDONECTETUS FACILIS LEO NIBH</h2>
-                                        <p>This is a W3C compliant free website template from OS Templates. For full terms of use of this template please read our website template licence</p>
-                                        <footer id="readmore">
+                                        <p>You can use and modify the template for both personal and commercial use. You
+                                            must keep all copyright information and credit links in the template and
+                                            associated files. For more HTML5 templates visit free website templates.</p>
+                                        <div class="readmore">
                                             <a href="#">Read More >></a>
-                                        </footer>
-                                </figcaption>
+                                        </div>
+                                    </figcaption>
                                 </figure>
                             </article>
                         </li>
@@ -95,46 +98,49 @@
                                     <img src="./images/demo/180x150.gif" alt="180x150">
                                     <figcaption id="figcap2">
                                         <h2>INDONECTETUS FACILIS LEO NIBH</h2>
-                                        <p>You can use and modify the template for both personal and commercial use. You must keep all copyright information and credit links in the template and associated files. For more HTML5 templates visit free website templates.</p>
-                                        <footer id="readmore">
+                                        <p>You can use and modify the template for both personal and commercial use. You
+                                            must keep all copyright information and credit links in the template and
+                                            associated files. For more HTML5 templates visit free website templates.</p>
+                                        <div class="readmore">
                                             <a href="#">Read More >></a>
-                                        </footer>
+                                        </div>
                                     </figcaption>
                                 </figure>
                             </article>
                         </li>
                     </ul>
                 </section>
-                </div>
-
-                <!-- ========== Aside ============== -->
-                <aside>
-                    <h2>CATEGORIES</h2>
-                    <nav>
-                        <ul>
-                            <li><a href="#">Free Website Templates</a></li>
-                            <li><a href="#">Free CSS Templates</a></li>
-                            <li><a href="#">Free XHTML Templates</a></li>
-                            <li><a href="#">Free Web Templates</a></li>
-                            <li><a href="#">Free Website Layouts</a></li>
-                            <li><a href="#">Free HTML5 Templates</a></li>
-                            <li><a href="#">Free Webdesign Templates</a></li>
-                            <li><a href="#">Free Firework Templates</a></li>
-                            <li><a href="#">Free PNG Templates</a></li>
-                            <li><a href="#">Free Website Themes</a></li>
-                        </ul>
-                    </nav>
-                </aside>
             </div>
+
+            <!-- ========== Aside ============== -->
+            <aside>
+                <h2>CATEGORIES</h2>
+                <nav>
+                    <ul>
+                        <li><a href="#">Free Website Templates</a></li>
+                        <li><a href="#">Free CSS Templates</a></li>
+                        <li><a href="#">Free XHTML Templates</a></li>
+                        <li><a href="#">Free Web Templates</a></li>
+                        <li><a href="#">Free Website Layouts</a></li>
+                        <li><a href="#">Free HTML5 Templates</a></li>
+                        <li><a href="#">Free Webdesign Templates</a></li>
+                        <li><a href="#">Free Firework Templates</a></li>
+                        <li><a href="#">Free PNG Templates</a></li>
+                        <li><a href="#">Free Website Themes</a></li>
+                    </ul>
+                </nav>
+            </aside>
         </div>
     </div>
+    </div>
 
-<!-- ========== Footer ============== -->
+    <!-- ========== Footer ============== -->
     <div class="wrapper row3">
-        <footer id="main_footer">
-            <p id="left_footer">Copyright © 2021 - All Rights Reserved - CinemaBandi</p>
-            <p id="right_footer">Template cloned from OS-Templates by Ervin </p>
+        <footer>
+            <p>Copyright © 2021 - All Rights Reserved - CinemaBandi</p>
+            <p>Template cloned from OS-Templates by Ervin </p>
         </footer>
     </div>
 </body>
+
 </html>
