completed sixth template

--- a/Assignments/Assignment Flex RWD/Flex RWD Basic 88/index.html
+++ b/Assignments/Assignment Flex RWD/Flex RWD Basic 88/index.html
@@ -32,7 +32,7 @@
 
     <!-- =================================================== Container =================================================== -->
     <div class="wrapper row2">
-        <div id="container">
+        <div class="container">
             <!-- ==================== Section 1 ==================== -->
             <section id="section1">
                 <img src="./images/demo/960x360.gif" alt="">
@@ -161,3 +161,5 @@
             <p id="right_footer">Template by OS Templates</p>
         </footer>
     </div>
+</body>
+</html>
