--- a/templates_FlexBox/T83_spaceX.html
+++ b/templates_FlexBox/T83_spaceX.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./T83_spaceX_style.css">
     <style>
-        #header {
+        hgghfg #header {
             display: block;
             width: 960px;
             margin: 0 auto;
@@ -32,17 +32,26 @@
             padding: 10px;
             margin: 20px 0;
         }
+
         #footer {
             display: block;
             width: 960px;
             margin: 0px;
         }
-        
+
         .fl_right {
-                display: flex;
-            }
+            display: flex;
+        }
+            
         @media only screen and (max-width:768px) {
+            * {
+                box-sizing: border-box;
+                padding: 0;
+                margin-right: 0;
+            }
+
             #header {
+                flex-direction: column;
                 width: 100%;
             }
 
@@ -56,7 +65,8 @@
                 align-items: center;
                 justify-content: center;
             }
-            #header nav ul li a{
+
+            #header nav ul li a {
                 text-align: center;
             }
 
@@ -64,7 +74,8 @@
                 padding: 0px;
                 margin: 0;
             }
-            .row2{
+
+            .row2 {
                 background-color: lightskyblue;
                 color: black;
             }
@@ -98,13 +109,14 @@
             .three_quarter {
                 width: 100%;
             }
-            .wrapper row3{
+
+            .wrapper row3 {
                 width: 100px;
             }
 
             #footer {
                 width: 100px;
-                margin:0 auto;
+                margin: 0 auto;
                 padding: 10px;
                 display: inline;
             }
