--- a/templates_FlexBox/T88_developer.html
+++ b/templates_FlexBox/T88_developer.html
@@ -74,6 +74,10 @@
       #header {
         width: 100%;
       }
+      header nav{
+        display: flex;
+        flex-direction: column;
+      }
 
       #hrgroup {
         background-color: black;
@@ -167,11 +171,12 @@
 
 
       .fl_left {
-        float: left;
-      }
+display: flex;      }
 
       .fl_right {
-        float: right;
+        display: flex;
+        justify-content: flex-end;
+
       }
 
       #shout {
