--- a/CSS/RWD(FlexBox)/basic65.html
+++ b/CSS/RWD(FlexBox)/basic65.html
@@ -340,6 +340,13 @@
 
             #art3 img {
                 align-self: center;
+                width: 95%;
+            }
+            footer{
+                height: auto;
+            }
+            footer p , footer span{
+                height: auto;
             }
         }
 
