--- a/CSS/RWD/basic87_RWD/index.html
+++ b/CSS/RWD/basic87_RWD/index.html
@@ -201,7 +201,7 @@
 
 
     /* ++++++++++++++++++++++++media max-768px+++++++++++++++++++++++++++++++++++++++++++ */
-    @media only screen and (max-width:768px) {
+    @media only screen and (max-width:768px) and (min-width:601px) {
 
 
       /* .col-s-1 {
@@ -257,14 +257,16 @@
       }
 
       #avicii {
-        width: 40%;
+        width: 38%;
         float: left;
+        margin-right: 0px;
       }
 
       #link {
-        width: 60%;
-        float: right;
+        width: 62%;
+        float: left;
         margin-right: 0%;
+        margin-left: 0px;
       }
 
       #link ul {
